# OpenXRProvider_v2

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/: FUNDING.yml
.github/workflows/: build.yml
bin_prebuilt/: sample_06_finger_painting
bin_prebuilt/openxr_provider/: openxr_provider.exp  openxr_provider.lib
bin_prebuilt/sample_01_hello/linux64/: sample_01_hello
bin_prebuilt/sample_02_hello_exts/linux64/: sample_02_hello_exts
bin_prebuilt/sample_03_hello_session/linux64/: sample_03_hello_session
bin_prebuilt/sample_04_hello_cube/android/: output-metadata.json  sample_04_hello_cube-Vulkan-release.apk
bin_prebuilt/sample_04_hello_cube/linux64/: sample_04_hello_cube
bin_prebuilt/sample_05_hello_pbr/android/: output-metadata.json
bin_prebuilt/sample_05_hello_pbr/linux64/: sample_05_hello_pbr
bin_prebuilt/sample_06_finger_painting/android/: output-metadata.json  sample_06_finger_painting-Vulkan-release.apk
bin_prebuilt/sample_07_finger_painting2/android/: output-metadata.json  sample_07_finger_painting2-Vulkan-debug.apk
bin_prebuilt/sample_07_finger_painting2/linux64/: sample_07_finger_painting2
bin_prebuilt/sample_08_finger_painting3/android/: output-metadata.json  sample_08_finger_painting3-Vulkan-debug.apk
bin_prebuilt/sample_08_finger_painting3/linux64/: sample_08_finger_painting3
bin_prebuilt/sample_09_hidden_worlds/android/: output-metadata.json  sample_09_hidden_worlds-Vulkan-debug.apk
bin_prebuilt/sample_09_hidden_worlds/linux64/: sample_09_hidden_worlds
bin_prebuilt/sample_10_openxr_workshop/android/: output-metadata.json  sample_10_openxr_workshop-Vulkan-debug.apk
gday_openxr/: CMakeLists.txt  main.cpp
openxr_provider/: CMakeLists.txt  README.md  project_config.h.in
openxr_provider/include/: openxr_provider.h
openxr_provider/include/openxr/: xr_linear.h
openxr_provider/include/provider/: common.hpp  data_types.hpp  ext_base.hpp  ext_eyegaze.hpp  ext_fbpassthrough.hpp  ext_fbrefreshrate.hpp  ext_handler.hpp  ext_handtracking.hpp  ext_htcwrist.hpp  ext_htcxtracker.hpp  ext_htcxvivetrackerinteraction.hpp  ext_template.hpp  input.hpp  interaction_profiles.hpp  log.hpp  project_config.h  provider.hpp  session.hpp
openxr_provider/include/xrvk/: common.hpp  data_types.hpp  xrvk.hpp
openxr_provider/include/xrvk/vulkanpbr/: VulkanDevice.hpp  VulkanUtils.hpp  VulkanglTFModel.h  macros.h
openxr_provider/src/: common_pvt.hpp  ext_eyegaze.cpp  ext_fbpassthrough.cpp  ext_fbreshrate.cpp  ext_handler.cpp  ext_handtracking.cpp  ext_htcwrist.cpp  ext_htcxtracker.cpp  ext_htcxvivetrackerinteraction.cpp  ext_template.cpp  input.cpp  interaction_profiles.cpp  provider.cpp  session.cpp
openxr_provider/src/xrvk/: xrvk.cpp
openxr_provider/src/xrvk/vulkanpbr/: VulkanglTFModel.cpp
openxr_template/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  multidex-config.pro  new_app_wizard.py  project_config.h.in
openxr_template/android_resources/vulkan/mipmap-anydpi-v26/: ic_openxr_app.xml
openxr_template/assets/models/: floor_spot.glb
openxr_template/assets/shaders/: floor_grid.frag  shape.vert  skybox.vert  vismask.frag
openxr_template/assets_src/floor/: floor_spot.afphoto
openxr_template/java/net/beyondreality/YOUR_APP_NAME_HERE/: MainActivity.java
openxr_template/openxr_app/: app.hpp
openxr_template/src/: YOUR_MAIN_CLASS_HERE.cpp  YOUR_MAIN_CLASS_HERE.hpp  main.cpp  main.hpp  project_config.h
sample_01_hello/: AndroidManifest.xml  CMakeLists-static-linking.txt  CMakeLists.txt  README.md  build.gradle  project_config.h.in
sample_01_hello/src/: main.cpp  project_config.h
sample_02_hello_exts/: AndroidManifest.xml  CMakeLists.txt  LICENSE  README.md  build.gradle  project_config.h.in
sample_02_hello_exts/src/: main.cpp  project_config.h
sample_03_hello_session/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  project_config.h.in
sample_03_hello_session/src/: main.cpp  project_config.h  renderer_vulkan.cpp  renderer_vulkan.h
sample_04_hello_cube/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  project_config.h.in
sample_04_hello_cube/src/: main.cpp  project_config.h  renderer_vulkan.cpp  renderer_vulkan.h
sample_05_hello_pbr/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  project_config.h.in
sample_05_hello_pbr/src/: main.cpp  project_config.h
sample_06_finger_painting/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  project_config.h.in
sample_06_finger_painting/src/: main.cpp  main.hpp  project_config.h
sample_07_finger_painting2/: AndroidManifest.xml  CMakeLists.txt  LICENSE  README.md  build.gradle  project_config.h.in
sample_07_finger_painting2/src/: main.cpp  main.hpp  project_config.h
sample_08_finger_painting3/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  project_config.h.in
sample_08_finger_painting3/src/: main.cpp  main.hpp  project_config.h
sample_09_hidden_worlds/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  multidex-config.pro  project_config.h.in
sample_09_hidden_worlds/src/: main.cpp  main.hpp  project_config.h
sample_10_openxr_workshop/: AndroidManifest.xml  CMakeLists.txt  README.md  build.gradle  multidex-config.pro  project_config.h.in
sample_10_openxr_workshop/openxr_app/: app.cpp  app.hpp  physics.cpp  physics.hpp
sample_10_openxr_workshop/src/: Workshop.cpp  Workshop.hpp  main.cpp  main.hpp  project_config.h
sample_XX_headless/: CMakeLists.txt  LICENSE  README.md  project_config.h.in
sample_XX_headless/src/: main.cpp  main.hpp  project_config.h
sample_extensions/htcx_vive_tracker_interaction/: .clang-format  CMakeLists.txt  LICENSE  README.md  project_config.h.in
sample_extensions/htcx_vive_tracker_interaction/assets/shaders/: irradiancecube.frag  skybox.frag
sample_extensions/htcx_vive_tracker_interaction/assets_src/: vive_tracker_2018.blend  vive_tracker_2018.blend1
sample_extensions/htcx_vive_tracker_interaction/src/: main.cpp  main.hpp  project_config.h
starter_files_android/meta/: AndroidManifest.xml  build.gradle
(+105 files in other folders)
